--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -2,7 +2,7 @@ name: Prepare Release
 on:
   push:
     branches:
-      - "master"
+      - "dp/test_migration"
 env:
   XCODE_VERSION: "['14.2', '14.3.1', '15.1', '15.2']"
   PLATFORM: "['ios', 'osx', 'watchos', 'tvos', 'catalyst', 'visionos']"
