publish docs only

--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - "master"
+      - "release-docs"
 env:
   XCODE_VERSION: "['14.2', '14.3.1', '15.1', '15.2']"
   PLATFORM: "['ios', 'osx', 'watchos', 'tvos', 'catalyst', 'visionos']"
@@ -229,112 +230,3 @@ jobs:
           with:
             name: realm-swift-${{ needs.prepare.outputs.VERSION }}
             path: pkg/realm-swift-${{ needs.prepare.outputs.VERSION }}.zip
-  test-package-examples:
-      runs-on: macos-13
-      name: Test examples
-      needs: [package-release, prepare]
-      steps:
-        - uses: actions/checkout@v4
-        - name: Select Xcode Version
-          run: sudo xcode-select -switch /Applications/Xcode_${{ env.TEST_VERSION }}.app
-        - name: Restore release
-          uses: actions/download-artifact@v4
-          with:
-            name: realm-swift-${{ needs.prepare.outputs.VERSION }}
-        - name: Test examples
-          run: sh -x build.sh release-test-examples
-  test-ios-static:
-      runs-on: macos-13
-      name: Run tests on iOS with configuration Static
-      needs: package-release
-      steps:
-        - uses: actions/checkout@v4
-        - name: Select Xcode Version
-          run: sudo xcode-select -switch /Applications/Xcode_${{ env.TEST_VERSION }}.app
-        - name: Test ios static
-          run: sh -x build.sh test-ios-static
-  test-osx-static:
-      runs-on: macos-13
-      name: Run tests on macOS
-      needs: package-release
-      steps:
-        - uses: actions/checkout@v4
-        - name: Select Xcode Version
-          run: sudo xcode-select -switch /Applications/Xcode_${{ env.TEST_VERSION }}.app
-        - name: Test osx static
-          run: |
-            export REALM_DISABLE_METADATA_ENCRYPTION=1
-            sh -x build.sh test-osx
-  test-installation:
-      runs-on: macos-13
-      name: Run installation test
-      needs: [package-release, prepare]
-      strategy:
-        matrix:
-          platform: ${{ fromJSON(needs.prepare.outputs.PLATFORM_MATRIX) }}
-          installation: [cocoapods, spm, carthage, xcframework]
-          linkage: [dynamic, static]
-          exclude:
-            - platform: visionos
-            - platform: catalyst
-              installation: carthage
-            - installation: carthage
-              linkage: static
-            - installation: xcframework
-              linkage: static
-          include:
-            - platform: ios
-              installation: xcframework
-              linkage: static
-      steps:
-        - uses: actions/checkout@v4
-        - uses: ruby/setup-ruby@v1
-          with:
-            bundler-cache: true
-        - name: Select Xcode Version
-          run: sudo xcode-select -switch /Applications/Xcode_${{ env.TEST_VERSION }}.app
-        - name: Restore release
-          uses: actions/download-artifact@v4
-          if: ${{ matrix.installation == 'xcframework' }}
-          with:
-            name: realm-${{ matrix.platform }}-${{ env.TEST_VERSION }}
-        - name: Unzip package release
-          if: ${{ matrix.installation == 'xcframework' }}
-          run: |
-            mkdir -p build
-            unzip realm-${{ matrix.platform }}-${{ env.TEST_VERSION }}.zip -d build
-        - name: Run installation test
-          run: |
-            echo "REALM_TEST_BRANCH=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-            cd examples/installation
-            bundle exec ./build.rb ${{ matrix.platform }} ${{ matrix.installation }} ${{ matrix.linkage }}
-  test-installation-xcframework:
-      runs-on: macos-13
-      name: Run installation test for xcframework
-      needs: [package-release, prepare]
-      env:
-        PLATFORM: 'osx'
-      strategy:
-        matrix:
-          xcode-version: ${{ fromJSON(needs.prepare.outputs.XCODE_VERSIONS_MATRIX) }}
-      steps:
-        - uses: actions/checkout@v4
-        - uses: ruby/setup-ruby@v1
-          with:
-            bundler-cache: true
-        - name: Select Xcode Version
-          run: sudo xcode-select -switch /Applications/Xcode_${{ matrix.xcode-version }}.app
-        - name: Restore release
-          uses: actions/download-artifact@v4
-          with:
-            name: realm-${{ env.PLATFORM }}-${{ matrix.xcode-version }}
-        - name: Unzip package release
-          run: |
-            mkdir -p build
-            unzip realm-${{ env.PLATFORM }}-${{ matrix.xcode-version }}.zip -d build
-        - name: Run installation test
-          run: |
-            echo "REALM_TEST_BRANCH=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-            cd examples/installation
-            bundle exec ./build.rb osx xcframework dynamic
-
